# BiblioAlly

./: README.md  setup.cfg  setup.py
BiblioAlly/: __init__.py  acmdl.py  catalog.py  gui.py  scopus.py  translator.py  wos.py
assets/pages/: browser.md  faq.md  use_case-catalog_is_open.md  use_case-close.md  use_case-converting_to_pandas.md  use_case-create_new_catalog.md  use_case-importing_referentes.md  use_case-invoking_browser.md  use_case-loading_by_attributes.md  use_case-loading_by_tags.md  use_case-retrieving_metadata.md  use_case-updating.md  workflow.md
src/: __init__.py  catalog.py  domain.py  gui.py  main.py
src/BiblioAlly/: acmdl.py  basetranslator.py  catalog.py  domain.py  gui.py  ieee.py  parse.py  scopus.py  translator.py  utility.py  wos.py
src/bibtex/: translator.py
src/bibtex/acmdl/: translator.py
src/bibtex/ieee/: translator.py
src/bibtex/scopus/: translator.py
src/bibtex/wos/: translator.py
tests/: BiblioAllyTests.db  test_catalog.py
tests/refs/: acm_dl.bib  ieeexplore.bib
