[metadata]
name = BiblioAlly
version = 0.0.1
author = Alex Sebastião Constâncio
author_email = gambit4348@gmail.com
description = A helper for literature reviews
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gambit4348/BiblioAlly
project_urls =
    Bug Tracker = https://github.com/gambit4348/BiblioAlly/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Natural Language :: English
    Topic :: Scientific/Engineering

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src